refactor: Исправлено opacity кнопок

--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -16,14 +16,14 @@
 }
 
 .popup__close:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 600px) {
   .popup__close {
     width: 20px;
     height: 20px;
-    right: 0px;
+    right: 0;
     top: -36px;
   } 
 }
